RESOLVED FIXED193347
[JSC] ModuleEnvironment do not have JSGlobalLexicalEnvironment as its upper scope
https://bugs.webkit.org/show_bug.cgi?id=193347
Summary [JSC] ModuleEnvironment do not have JSGlobalLexicalEnvironment as its upper s...
Yusuke Suzuki
Reported 2019-01-10 21:52:49 PST
I believe it should have, according to the spec.
Attachments
Patch (10.01 KB, patch)
2020-04-09 13:38 PDT, Yusuke Suzuki
no flags
Patch (11.90 KB, patch)
2020-04-09 14:36 PDT, Yusuke Suzuki
tzagallo: review+
Yusuke Suzuki
Comment 1 2020-04-09 13:38:43 PDT
Yusuke Suzuki
Comment 2 2020-04-09 14:36:29 PDT
Tadeu Zagallo
Comment 3 2020-04-09 15:28:02 PDT
Comment on attachment 396012 [details] Patch r=me
Yusuke Suzuki
Comment 4 2020-04-09 15:49:08 PDT
Radar WebKit Bug Importer
Comment 5 2020-04-09 15:50:18 PDT
Yusuke Suzuki
Comment 6 2020-04-29 16:17:29 PDT
*** Bug 186888 has been marked as a duplicate of this bug. ***
Yusuke Suzuki
Comment 7 2021-06-24 18:20:45 PDT
*** Bug 202044 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.