[JSC] ModuleEnvironment do not have JSGlobalLexicalEnvironment as its upper scope https://bugs.webkit.org/show_bug.cgi?id=193347

Reviewed by Tadeu Zagallo.

JSTests:

* stress/global-lexical-environment-access-from-module.js: Added.
(shouldBe):
(import.string_appeared_here.then):
* stress/resources/global-lexical-environment-access-from-module-child.js: Added.
(export.read):
(export.write):

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/scripting-1/the-script-element/module/inline-async-execorder-expected.txt:

Source/JavaScriptCore:

The upper scope of module scope should be global lexical environment instead of global object.
This patch fixes it to allow modules to access global lexical environment's variables.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::notifyLexicalBindingUpdate):
* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
* runtime/JSModuleEnvironment.h:
* runtime/JSModuleRecord.cpp:
(JSC::JSModuleRecord::instantiateDeclarations):

Canonical link: https://commits.webkit.org/223194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259835 268f45cc-cd09-0410-ab3c-d52691b4dbfc